--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next",
     "build": "node ./scripts/gen-rss.js && next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "echo \"No tests configured\" && exit 0"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
